Add adjusted S2BS function.

--- a/L08/L08.vcxproj
+++ b/L08/L08.vcxproj
@@ -148,6 +148,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="L08.cpp" />
+    <ClCompile Include="S2BS.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="S2BS.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
